--- a/bfeb.html
+++ b/bfeb.html
@@ -14,23 +14,42 @@
 	  grid-template-columns: auto auto auto;
 	  background-color: rgb(236, 237, 229);
 	  padding: 10px;
+	  margin: 0 auto;
 	}
 	.grid-item {
 	  background-color: rgb(236, 237, 229);
 	  border: 10px rgb(236, 237, 229);
 	  padding: 1.5rem;
+	  margin: 0 auto;
 	
 	}
-	</style>
+</style>
+<style>
+	.container {
+	  display: grid;
+	  grid-template-columns: auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
 
 <!-- rgb(104, 71, 91); -->
 
 
 </head>
 
-<div class="grid-container">
+<div class="container">
 	<a href="index.html"><h4>Birth Month Flowers</h4></a>
 </div>
+
 
 <!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
 <!-- <body style="background-color:lightgoldenrodyellow"></body> -->
@@ -43,14 +62,10 @@
 
 
 <!--  this is my navigation -->
-
-	<!-- <img src="images/violet2.jpeg" width="60%">  -->
-	<!-- hihi this is comment -->
-
 <div class="grid-container">
-		<div class="grid-item"><a href="bjan.html">Previous Month: January</a></div>
+		<div class="grid-item"><a href="bjan.html">↽ January</a></div>
 		<div class="grid-item"><a href="index.html">View All the Months</a></div>
-		<div class="grid-item"><a href="bmar.html">Next Month: March</a></div> 
+		<div class="grid-item"><a href="bmar.html">March ⇁</a></div> 
 </div>
 
 
