--- a/bjun.html
+++ b/bjun.html
@@ -8,11 +8,47 @@
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
 
+<style>
+	.grid-container {
+	  display: grid;
+	  grid-template-columns: auto auto auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.grid-item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
+<style>
+	.container {
+	  display: grid;
+	  grid-template-columns: auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
+
 </head>
 
-<!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
-<!-- <body style="background-color:lightgoldenrodyellow"></body> -->
+
 <body>
+	<div class="container">
+		<a href="index.html"><h4>Birth Month Flowers</h4></a>
+	</div>
+
 	<h1>June</h1>
 	<h2>Rose</h2>
 	<h3>Floriography</h3>
@@ -23,16 +59,10 @@
 		</p>
 
 <!--  this is my navigation -->
-<div>
-	<a href="bjul.html">Next Month: July</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="bmay.html">Previous Month: May</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="birthmonthflowers.html">Back to the birth month list</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	</div>
-	<img src="images/rose.jpeg" width="60%"> 
-	<!-- hihi this is comment -->
-
+<div class="grid-container">
+		<div class="grid-item"><a href="bmay.html">↽ May</a></div>
+		<div class="grid-item"><a href="index.html">View All the Months</a></div>
+		<div class="grid-item"><a href="bjul.html">July ⇁</a></div> 
+</div>
 </body>
 </html>
