--- a/bmay.html
+++ b/bmay.html
@@ -8,11 +8,46 @@
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
 
+<style>
+	.grid-container {
+	  display: grid;
+	  grid-template-columns: auto auto auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.grid-item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
+<style>
+	.container {
+	  display: grid;
+	  grid-template-columns: auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
+
 </head>
 
-<!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
-<!-- <body style="background-color:lightgoldenrodyellow"></body> -->
 <body>
+	<div class="container">
+		<a href="index.html"><h4>Birth Month Flowers</h4></a>
+	</div>
+
 	<h1>May</h1>
 	<img src="images/hawthorn.png" width="70%"> 
 	<h2>Hawthorns</h2>
@@ -24,16 +59,11 @@
 		</p>
 
 <!--  this is my navigation -->
-<div>
-	<a href="bjun.html">Next Month: June</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="bapr.html">Previous Month: April</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="birthmonthflowers.html">Back to the birth month list</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	</div>
-	<!-- <img src="images/hawthorn.png" width="60%">  -->
-	<!-- hihi this is comment -->
+<div class="grid-container">
+		<div class="grid-item"><a href="bapr.html">↽ April</a></div>
+		<div class="grid-item"><a href="index.html">View All the Months</a></div>
+		<div class="grid-item"><a href="bjun.html">June ⇁</a></div> 
+</div>
 
 </body>
 </html>
