--- a/boct.html
+++ b/boct.html
@@ -7,12 +7,47 @@
 <title>October: Marigold</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<style>
+	.grid-container {
+	  display: grid;
+	  grid-template-columns: auto auto auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.grid-item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
+<style>
+	.container {
+	  display: grid;
+	  grid-template-columns: auto;
+	  background-color: rgb(236, 237, 229);
+	  padding: 10px;
+	  margin: 0 auto;
+	}
+	.item {
+	  background-color: rgb(236, 237, 229);
+	  border: 10px rgb(236, 237, 229);
+	  padding: 1.5rem;
+	  margin: 0 auto;
+	
+	}
+</style>
 
 </head>
 
-<!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
-<!-- <body style="background-color:lightgoldenrodyellow"></body> -->
+
 <body>
+	<div class="container">
+		<a href="index.html"><h4>Birth Month Flowers</h4></a>
+	</div>
+
 	<h1>October</h1>
 	<img src="images/marigold.png" width="50%"> 
 	<h2>Marigold</h2>
@@ -24,16 +59,11 @@
 		</p>
 
 <!--  this is my navigation -->
-<div>
-	<a href="bnov.html">Next Month: November</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="bsep.html">Previous Month: September</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="birthmonthflowers.html">Back to the birth month list</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;
-	</div>
-	<!-- <img src="images/marigold.jpeg" width="60%">  -->
-	<!-- hihi this is comment -->
+	<div class="grid-container">
+		<div class="grid-item"><a href="bsep.html">↽ September</a></div>
+		<div class="grid-item"><a href="index.html">View All the Months</a></div>
+		<div class="grid-item"><a href="bnov.html">November ⇁</a></div> 
+</div>
 
 </body>
 </html>
