--- a/baug.html
+++ b/baug.html
@@ -7,6 +7,10 @@
 <title>August: Poppy</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+
 <style>
 	.grid-container {
 	  display: grid;
@@ -53,9 +57,18 @@
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">"Sleep", "Peace", and "Death"</p>
 
-		<p>
-		<span style="color:red">Hello world,</span> this is the website of xyz
-		</p>
+		<div style="text-align: center;">
+			<h7>Scientific name: Papaver somniferum</h7><br>
+			<h7>Family: Papaveraceae</h7><br>
+			<h7>Genus: Papaver</h7><br>
+			<h7>Kingdom: Plantae</h7><br>
+			<h7>Order: Ranunculales</h7><br>
+			<h7>Blooming period: April - June</h7><br>
+			<h7></h7><br>
+			<h7></h7>
+		</div>
+		
+	<br><br><br>
 
 <!--  this is my navigation -->
 	<div class="grid-container">
