--- a/bdec.html
+++ b/bdec.html
@@ -7,6 +7,10 @@
 <title>December: Holly</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+
 <style>
 	.grid-container {
 	  display: grid;
@@ -49,13 +53,20 @@
 	</div>
 
 	<h1>December</h1>
+	<img src="images/holly.png" width="60%"> 
 	<h2>Holly</h2>
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">"Happiness", "Peace", and "Optimism at home"</p>
 
-		<p>
-		<span style="color:red">Hello world,</span> this is the website of xyz
-		</p>
+		<div style="text-align: center;">
+			<h7>Scientific name: Ilex</h7><br>
+			<h7>Family: Aquifoliaceae; DC. ex A.Rich.</h7><br>
+			<h7>Genus: Ilex; L.</h7><br>
+			<h7>Kingdom: Plantae</h7><br>
+			<h7>Order: Aquifoliales</h7>
+		</div>
+
+	<br><br><br><br><br><br>
 
 <!--  this is my navigation -->
 	<div class="grid-container">
