--- a/bfeb.html
+++ b/bfeb.html
@@ -7,6 +7,9 @@
 <title>February: Violet</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
 <style>
 	.grid-container {
@@ -41,7 +44,6 @@
 	}
 </style>
 
-<!-- rgb(104, 71, 91); -->
 
 
 </head>
@@ -52,7 +54,6 @@
 
 
 <!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
-<!-- <body style="background-color:lightgoldenrodyellow"></body> -->
 <body>
 	<h1>February</h1>
 	<img src="images/violet2.png" width="50%"> 
@@ -60,6 +61,17 @@
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">“Modesty” and “Humility”</p>
 
+		<div style="text-align: center;">
+			<h7>Scientific name: Viola Manchuria</h7><br>
+			<h7>Classification Angiosperms (Dicotyledons)</h7><br>
+			<h7>Higher classification: Violaceae</h7><br>
+			<h7>Distribution: Korea, China, Japan, eastern Siberia</h7><br>
+			<h7>Blooming season: Spring</h7>
+		</div>
+
+		<br><br><br>
+	
+		
 
 <!--  this is my navigation -->
 <div class="grid-container">
