--- a/bjan.html
+++ b/bjan.html
@@ -8,6 +8,9 @@
 <title>January: Carnation</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
 <style>
 	.grid-container {
@@ -25,6 +28,8 @@
 	
 	}
 </style>
+<!-- container for footer -->
+
 <style>
 	.container {
 	  display: grid;
@@ -41,6 +46,7 @@
 	
 	}
 </style>
+<!-- container for banner -->
 
 </head>
 
@@ -49,16 +55,26 @@
 	<div class="container">
 		<a href="index.html"><h4>Birth Month Flowers</h4></a>
 	</div>
+	<!-- back to the homepage -->
 
 	<h1>January</h1>
 	<img src="images/carnation2.png" width="50%" class="center"> 
 	<h2>Carnation</h2>
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">"Fascination", "Distinction" and "Love"</p>
-
 		<p>
-		<span style="color:red">Hello world,</span> this is the website of xyz
-		</p>
+	<div style="text-align: center;">
+		<h7>Scientific name: Dianthus caryophyllus</h7><br>
+		<h7>Family: Caryophyllaceae</h7><br>
+		<h7>Genus: Dianthus</h7><br>
+		<h7>Kingdom: Plantae</h7><br>
+		<h7>Order: Caryophyllales</h7><br>
+		<h7>Origin: Southern Europe and Western Asia</h7><br>
+		<h7>Blooming period: July - August</h7>
+	</div>
+
+	<br><br><br>
+
 
 <!--  this is my navigation -->
 	<div class="grid-container">
