--- a/bjul.html
+++ b/bjul.html
@@ -7,6 +7,9 @@
 <title>July: Water lily</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
 <style>
 	.grid-container {
@@ -54,9 +57,16 @@
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">"Pleasure" and "Peace"</p>
 
-		<p>
-		<span style="color:red">Hello world,</span> this is the website of xyz
-		</p>
+		<div style="text-align: center;">
+			<h7>Scientific name: Nymphaeaceae</h7><br>
+			<h7>Family: Nymphaeaceae; Salisb.</h7><br>
+			<h7>Kingdom: Plantae</h7><br>
+			<h7>Order: Nymphaeales</h7><br>
+			<h7>Blooming period: June - August</h7><br>
+			<h7>Habitat: Pond</h7>
+		</div>
+	
+	<br><br><br><br><br>
 
 <!--  this is my navigation -->
 	<div class="grid-container">
