--- a/bmar.html
+++ b/bmar.html
@@ -7,6 +7,9 @@
 <title>March: Daffodil</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
 <style>
 	.grid-container {
@@ -54,6 +57,19 @@
 	<h2>Daffodil</h2>
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">"Rebirth", "New beginnings", "Desire", and "Self-love."</p>
+
+		<div style="text-align: center;">
+			<h7>Scientific name Narcissus tazetta var. chinensis</h7><br>
+			<h7>Family: Amaryllidaceae</h7><br>
+			<h7>Subfamily: Amaryllidoideae</h7><br>
+			<h7>Genus: Narcissus; L.</h7><br>
+			<h7>Kingdom: Plantae</h7><br>
+			<h7>Order: Asparagales</h7><br>
+			<h7>Origin: Mediterranean coast, Northeast Asia</h7><br>
+			<h7>Blooming period: December - March</h7>
+		</div>
+
+<br><br><br>
 
 
 <!--  this is my navigation -->
