--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
 <link rel="stylesheet" href="css/bstyle.css">
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
 
-
 <style>
 	.grid-container {
 	  display: grid;
@@ -44,9 +43,6 @@
 </style>
 
 
-
-
-
 </head>
 
 <div class="container">
@@ -60,10 +56,14 @@
  <br>
  <br>
 
-  <h1>What are Birth Month Flowers?</h1>
-  <h5>
-    Birth month flowers are flowers associated with specific months of the year, similar to birthstones. Each month has one or more flowers traditionally linked to it, often due to factors such as blooming seasons, symbolism, or historical significance. Birth month flowers are often used as gifts or decorations for birthdays, weddings, and other special occasions, symbolizing various qualities and sentiments associated with each month.
-  </h5>
+    <h5>❀ Contact us! ❀</h5> 
+    <img src="images/jiwon.jpg" width="20%">
+	<!-- just a picture of younger me with flowers! -->
+	
+    <a href=mailto:"jiwonc@ocadu.com"><h6>jiwonc@ocadu.ca</h6></a>
+	<!-- this will send u directly to my email page -->
+
+
 
   <br>
   <br>
