--- a/index.html
+++ b/index.html
@@ -60,10 +60,6 @@
           }
         </style>
 
-
-
-
-
 </head>
 
 <!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
@@ -73,9 +69,9 @@
   <h1 class="dropdown">Birth Month Flowers
     <div class="dropdown-content">
       <a href="whatarebmf.html">What are Birth Month Flowers?</a>
-      <!-- Add more dropdown items as needed -->
     </div>
   </h1>
+  
 
   <div class="grid-container">
     <div class="grid-item"><img src="images/carnation2tn.png"><br><a href="bjan.html">January</a></div>
@@ -95,6 +91,11 @@
 <br>
 
   <h3>❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀❀</h3>
+  
+    <a href="contact.html"><p>❀ Contact us! ❀</p></a>
+    <a href="whatarebmf.html"><p>❀ What are Birth Month Flowers? ❀</p></a>
+    <a href="start.html"><p>❀ Happy birthday! ❀</p></a>
+    <br>
   
 
 </body>
