--- a/start.html
+++ b/start.html
@@ -13,6 +13,11 @@
 <body>
     <div>
         <img src="images/IMG_1947.GIF" width="100%"> 
-        <div class="centered"><a href="start2.html"><h1>Blow your candle!</h1></a></div>
+        <div class="centered"><a href="start2.html"><h1>Make a wish!</h1></a></div>
     </div>
 </body>
+
+
+
+
+<!-- this page is just for fun, happy birthday! -->
