--- a/boct.html
+++ b/boct.html
@@ -7,6 +7,10 @@
 <title>October: Marigold</title>
 <link rel="stylesheet" href="css/bstyle.css"> 
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+
 <style>
 	.grid-container {
 	  display: grid;
@@ -54,9 +58,15 @@
 	<h3>Floriography</h3>
 		<p style="color:rgb(67, 67, 67)">"Energy", "Good luck", "Warmth", "Creativity", "Prosperity", and "Passion"</p>
 
-		<p>
-		<span style="color:red">Hello world,</span> this is the website of xyz
-		</p>
+		<div style="text-align: center;">
+			<h7>Scientific name: Tagetes</h7><br>
+			<h7>Order: Daisy family</h7><br>
+			<h7>Blooming season: Early summer to late autumn</h7><br>
+			<h7>Hanitat: Sunny grass field</h7>
+		</div>
+
+		
+	<br><br><br><br><br>
 
 <!--  this is my navigation -->
 	<div class="grid-container">
