--- a/start2.html
+++ b/start2.html
@@ -11,31 +11,10 @@
 </head>
 
 <body>
-    <!-- <h1>Select your birth month!</h1>
-    <div>
-        <a href="bjan.html">January</a> 
-        <br>
-	    <a href="bfeb.html">February</a>
-        <br>
-        <a href="bmar.html">March</a>
-        <br>
-        <a href="bapr.html">April</a>
-        <br>
-        <a href="bmay.html">May</a>
-        <br>
-        <a href="bjun.html">June</a>
-        <br>
-        <a href="bjul.html">July</a>
-        <br>
-        <a href="baug.html">August</a>
-        <br>
-        <a href="bsep.html">September</a>
-        <br>
-        <a href="boct.html">October</a>
-        <br>
-        <a href="bnov.html">Novemebr</a>
-        <br>
-        <a href="bdec.html">December</a>
-    </div> -->
-    <img src="images/IMG_1949.GIF" width="100%"> 
+    <body>
+        <div>
+            <img src="images/IMG_1949.GIF" width="100%"> 
+            <div class="centered"><a href="index.html"><h1>back to the homepage</h1></a></div>
+        </div>
+    </body>
 </body>
