--- a/whatarebmf.html
+++ b/whatarebmf.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Birth Month Flowers</title>
+<title>What are Birth Month Flowers?</title>
 <link rel="stylesheet" href="css/bstyle.css">
 <link rel="stylesheet" href="https://use.typekit.net/jrv1qan.css">
 
